@@ -1,3 +1,7 @@
+Mon Feb 18 17:31:48 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.h (push,pop): Fix Reg64 to WordReg to allow 16bit operands.
+
 Mon Feb 11 12:53:19 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.h (push,pop): Allow 16bit operands in 64bit mode.
